--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <title>Sori - Learn Korean by Sound</title>
 <meta name="theme-color" content="#7c3aed"/>
 
-<!-- Favicon -->
 <link rel="icon" type="image/svg+xml"
   href='data:image/svg+xml;utf8,
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
@@ -14,7 +13,6 @@
     <text x="16" y="40" font-family="sans-serif" font-size="22" font-weight="bold" fill="white">소</text>
   </svg>'/>
 
-<!-- GA -->
 <script>window.GA_ID='G-X1Q98DBKR5';</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X1Q98DBKR5"></script>
 <script>
@@ -24,70 +22,47 @@
   gtag('config',window.GA_ID,{send_page_view:false});
 </script>
 
-<!-- Firebase compat -->
 <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 <script defer src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
 <style>
 *{box-sizing:border-box}
-body{
-  font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
-  max-width:720px;margin:0 auto;padding:16px;background:#faf8ff;min-height:100vh;color:#111827
-}
+body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;max-width:720px;margin:0 auto;padding:16px;background:#faf8ff;min-height:100vh;color:#111827}
 h1{font-size:26px;margin:0 0 4px;color:#7c3aed;font-weight:800}
 .intro{color:#9ca3af;font-size:12px;margin-bottom:10px;line-height:1.3;font-weight:500}
-
 .header{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px}
 .top-btn{padding:8px 14px;border-radius:12px;font-size:12px;font-weight:700;border:0;cursor:pointer}
 .top-btn.primary{background:#7c3aed;color:#fff}
-
 .card{background:#fff;border-radius:18px;padding:18px;margin:10px 0;box-shadow:0 2px 12px rgba(0,0,0,.06)}
-
-/* Category picker */
 .category-bar{display:flex;align-items:center;gap:12px}
 .picker-wrap{position:relative}
-.picker-trigger{
-  padding:12px 18px;border-radius:14px;background:#7c3aed;color:#fff;
-  font-weight:800;border:0;cursor:pointer;min-width:220px;text-align:center
-}
-.picker-menu{
-  position:absolute;top:100%;left:0;right:0;margin-top:6px;background:#fff;border-radius:12px;
-  box-shadow:0 10px 30px rgba(0,0,0,.15);overflow:hidden;max-height:0;transition:max-height .25s ease;z-index:50
-}
+.picker-trigger{padding:12px 18px;border-radius:14px;background:#7c3aed;color:#fff;font-weight:800;border:0;cursor:pointer;min-width:220px;text-align:center}
+.picker-menu{position:absolute;top:100%;left:0;right:0;margin-top:6px;background:#fff;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,.15);overflow:hidden;max-height:0;transition:max-height .25s ease;z-index:50}
 .picker-menu.open{max-height:160px}
 .picker-list{max-height:150px;overflow-y:auto;padding:6px;scrollbar-width:thin}
-.picker-item{height:44px;line-height:44px;border-radius:12px;margin:6px 4px;text-align:center;
-  background:#f6f6ff;color:#5b5b72;font-weight:700;cursor:pointer;user-select:none}
+.picker-item{height:44px;line-height:44px;border-radius:12px;margin:6px 4px;text-align:center;background:#f6f6ff;color:#5b5b72;font-weight:700;cursor:pointer;user-select:none}
 .picker-item:hover,.picker-item.active{background:#7c3aed;color:#fff}
 .saved-btn{height:44px;padding:0 18px;border-radius:12px;background:#fff;color:#7c3aed;border:2px solid #e9defd;font-weight:800;cursor:pointer;white-space:nowrap}
 .saved-btn:hover{background:#f7f2ff}
-
-/* Sub chips */
 .sub-filters{display:flex;gap:8px;flex-wrap:wrap;margin-top:12px}
 .sub-chip{display:inline-flex;align-items:center;gap:6px;padding:6px 12px;border-radius:14px;background:#fff;border:2px solid #e5e7eb;color:#374151;font-size:12px;font-weight:600;cursor:pointer;user-select:none}
 .sub-chip.active{background:#7c3aed;border-color:#7c3aed;color:#fff}
-
 .row-between{display:flex;justify-content:space-between;align-items:center;gap:8px}
 .badge{display:inline-block;background:#7c3aed;color:#fff;font-size:11px;font-weight:800;padding:5px 10px;border-radius:12px}
 .icon-btn{border:none;background:transparent;width:36px;height:36px;display:inline-flex;align-items:center;justify-content:center;font-size:20px;color:#9ca3af;cursor:pointer;border-radius:8px}
 .icon-btn.active{color:#e11d48}
-
 .context{color:#6b7280;font-size:16px;text-align:center;margin:8px 0 0;font-weight:600}
-
 .kbox{background:#f3f4f6;border-radius:16px;padding:18px 14px;margin:12px 0;text-align:center}
 .ko{font-size:30px;font-weight:900;margin:0 0 8px}
 .en{color:#6b7280;font-size:16px;margin:0 0 10px;font-weight:600}
-
 .practice{background:#f9fafb;border-radius:12px;padding:12px}
 .practice-label{font-size:12px;font-weight:600;color:#6b7280;text-align:center;margin:0 0 8px}
 .dots{display:flex;gap:10px;justify-content:center;margin-bottom:8px}
 .rep-dot{width:30px;height:30px;border-radius:50%;border:2px solid #e5e7eb;background:#fff;transition:.15s}
 .rep-dot.completed{background:#7c3aed;border-color:#7c3aed}
-
 button.big{width:100%;padding:14px 20px;border-radius:14px;border:0;cursor:pointer;font-weight:800;font-size:15px;background:#7c3aed;color:#fff}
-
-/* Speed slider + layout */
+/* Speed */
 .row{display:flex;align-items:center;justify-content:center;gap:12px;background:#f9fafb;border-radius:10px;padding:10px;margin-top:8px}
 .speed-val{min-width:56px;text-align:left;font-variant-numeric:tabular-nums}
 input[type="range"]{accent-color:#7c3aed;outline:0}
@@ -95,42 +70,28 @@ input[type="range"]::-webkit-slider-runnable-track{height:6px;border-radius:999p
 input[type="range"]::-webkit-slider-thumb{width:18px;height:18px;border-radius:50%;background:#7c3aed;border:2px solid #6d28d9;margin-top:-6px}
 input[type="range"]::-moz-range-track{height:6px;border-radius:999px;background:#e9defd}
 input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;background:#7c3aed;border:2px solid #6d28d9}
-
 .tip-card{margin-top:10px;background:#fff1f2;border-left:3px solid #e11d48;border-radius:10px;padding:10px}
 .tip-text{font-size:12px;color:#9f1239;font-weight:600}
-
 .hidden-tabs{display:none}
-
-/* Auth modal */
+/* Auth */
 .auth{position:fixed;inset:0;display:none;align-items:center;justify-content:center;z-index:9999;background:rgba(0,0,0,.45);padding:16px}
 .auth.open{display:flex}
 .auth-card{background:#fff;width:100%;max-width:380px;border-radius:20px;padding:24px;box-shadow:0 18px 50px rgba(0,0,0,.35);text-align:center;position:relative}
 .auth-close{position:absolute;top:10px;right:10px;background:none;border:none;font-size:22px;color:#9ca3af;cursor:pointer}
-.gbtn{
-  display:flex;align-items:center;justify-content:center;gap:10px;
-  width:100%; padding:10px 14px; border-radius:12px; border:1.5px solid #e5e7eb;
-  background:#fff; color:#111827; font-weight:700; cursor:pointer;
-}
-.gbtn:hover{border-color:#d8dbe2; box-shadow:0 2px 8px rgba(124,58,237,.15)}
+.gbtn{display:flex;align-items:center;justify-content:center;gap:10px;width:100%;padding:10px 14px;border-radius:12px;border:1.5px solid #e5e7eb;background:#fff;color:#111827;font-weight:700;cursor:pointer}
+.gbtn:hover{border-color:#d8dbe2;box-shadow:0 2px 8px rgba(124,58,237,.15)}
 .glogo{width:18px;height:18px;display:inline-block}
-
-/* Modern nav bar */
+/* Nav */
 .navbar{display:flex;align-items:center;justify-content:space-between;gap:14px;flex-wrap:nowrap}
 .nav-center{min-width:130px;text-align:center;font-size:13px;color:#6b7280;font-weight:700}
-.nav-btn{
-  display:inline-flex;align-items:center;justify-content:center;gap:10px;
-  padding:12px 28px;border-radius:14px;border:1.5px solid #e5e7eb;
-  background:#fff;color:#111827;cursor:pointer;font-weight:800;font-size:14px;
-  box-shadow:0 1px 6px rgba(0,0,0,.05)
-}
+.nav-btn{display:inline-flex;align-items:center;justify-content:center;gap:10px;padding:12px 28px;border-radius:14px;border:1.5px solid #e5e7eb;background:#fff;color:#111827;cursor:pointer;font-weight:800;font-size:14px;box-shadow:0 1px 6px rgba(0,0,0,.05)}
 .nav-btn:hover{border-color:#d8dbe2}
 .nav-btn .caret{font-size:15px;color:#7c3aed}
 .nav-btn:disabled{opacity:.5;cursor:not-allowed}
-
-/* Mobile safety */
-@media (max-width: 480px){
+/* Mobile */
+@media (max-width:480px){
   .navbar{flex-wrap:wrap}
-  .nav-btn{flex:1 1 calc(50% - 8px); min-width:140px}
+  .nav-btn{flex:1 1 calc(50% - 8px);min-width:140px}
   .nav-center{order:3;width:100%;margin-top:8px}
 }
 </style>
@@ -163,8 +124,7 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
   <div id="subFilters" class="sub-filters"></div>
 </section>
 
-<!-- LESSON -->
-<section id="lessonCard" class="card">
+<section class="card" id="lessonCard">
   <div class="row-between">
     <div id="badge" class="badge">Greeting</div>
     <button id="scrapBtn" class="icon-btn" title="Save this phrase" aria-label="Save">☆</button>
@@ -224,7 +184,7 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 <script defer src="data/drama.js?v=20251017"></script>
 <script defer src="data/dataindex.js?v=20251017"></script>
 
-<!-- APP SCRIPTS -->
+<!-- APP -->
 <script defer src="js/state.js?v=20251017"></script>
 <script defer src="js/tts.js?v=20251017"></script>
 <script defer src="js/app.js?v=20251017"></script>
@@ -232,18 +192,14 @@ input[type="range"]::-moz-range-thumb{width:18px;height:18px;border-radius:50%;b
 <!-- Auth wiring -->
 <script>
 document.addEventListener('DOMContentLoaded', ()=>{
-  const modal = authModal, loginBtn = document.getElementById('loginBtn'), closeBtn = authClose;
+  const modal=authModal, loginBtn=document.getElementById('loginBtn'), closeBtn=authClose;
   const open = ()=> modal.classList.add('open');
-  const close= ()=> modal.classList.remove('open');
+  const close=()=> modal.classList.remove('open');
   function wireAsLogin(){ loginBtn.textContent='Login'; loginBtn.onclick=open; }
-  function wireAsLogout(){
-    loginBtn.textContent='Logout';
-    loginBtn.onclick= async ()=>{ try{ await window.SoriUser?.logout?.(); }catch(e){ console.warn(e);} };
-  }
+  function wireAsLogout(){ loginBtn.textContent='Logout'; loginBtn.onclick= async ()=>{ try{ await window.SoriUser?.logout?.(); }catch(e){} }; }
   closeBtn?.addEventListener('click', close);
   modal?.addEventListener('click', e=>{ if(e.target===modal) close(); });
-  try{ firebase.auth().onAuthStateChanged(user=>{ user ? (close(), wireAsLogout()) : wireAsLogin(); }); }
-  catch(e){ console.warn('[Auth init]', e); wireAsLogin(); }
+  try{ firebase.auth().onAuthStateChanged(user=>{ user ? (close(), wireAsLogout()) : wireAsLogin(); }); }catch(e){ wireAsLogin(); }
 });
 </script>
 
@@ -251,7 +207,6 @@ document.addEventListener('DOMContentLoaded', ()=>{
 <script>
 (function(){
   const CATS=["Daily","Travel","K-Drama"];
-  const legacy={daily:dailyBtn,travel:travelBtn,drama:dramaBtn};
   const trigger=pickerTrigger, menu=pickerMenu, list=menu.querySelector('.picker-list');
   list.innerHTML='';
   CATS.forEach((c,i)=>{
@@ -259,7 +214,10 @@ document.addEventListener('DOMContentLoaded', ()=>{
     el.className='picker-item'+(i===0?' active':''); el.textContent=c;
     el.onclick=()=>{ list.querySelectorAll('.picker-item').forEach(n=>n.classList.remove('active')); el.classList.add('active');
       trigger.textContent=c; menu.classList.remove('open');
-      const key=c.toLowerCase(); if(key==='daily')dailyBtn.click(); if(key==='travel')travelBtn.click(); if(key.includes('drama'))dramaBtn.click();
+      const key=c.toLowerCase();
+      if(key==='daily') dailyBtn.click();
+      else if(key==='travel') travelBtn.click();
+      else dramaBtn.click();
       changeTip();
     };
     list.appendChild(el);
@@ -268,23 +226,12 @@ document.addEventListener('DOMContentLoaded', ()=>{
   document.onclick=()=>menu.classList.remove('open');
   savedBtn?.addEventListener('click',()=> savedBtnHidden?.click());
 
-  const tips=[
-    "Tip: Small daily reps beat big, rare sessions.",
-    "Tip: Shadow the sound, not the spelling.",
-    "Tip: Say it out loud — your mouth must learn too.",
-    "Tip: Five clean repeats > twenty sloppy ones.",
-    "Tip: Record yourself and match the rhythm.",
-    "Tip: First mimic, then understand.",
-    "Tip: Keep the same speed; build consistency.",
-    "Tip: Close your eyes and copy the melody.",
-    "Tip: Bite-sized goals. One phrase at a time.",
-    "Tip: Revisit yesterday — retention makes speed."
-  ];
+  const tips=["Tip: Small daily reps beat big, rare sessions.","Tip: Shadow the sound, not the spelling.","Tip: Say it out loud — your mouth must learn too.","Tip: Five clean repeats > twenty sloppy ones.","Tip: Record yourself and match the rhythm.","Tip: First mimic, then understand.","Tip: Keep the same speed; build consistency.","Tip: Close your eyes and copy the melody.","Tip: Bite-sized goals. One phrase at a time.","Tip: Revisit yesterday — retention makes speed."];
   const tipEl=tipText; function changeTip(){ tipEl.textContent=tips[Math.floor(Math.random()*tips.length)]; } changeTip();
 })();
 </script>
 
-<!-- Navigation rewrite -->
+<!-- Nav rewrite -->
 <script>
 (function(){
   const btn={next:nextBtn,prev:prevBtn,daily:dailyBtn,travel:travelBtn,drama:dramaBtn};
@@ -307,7 +254,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
 })();
 </script>
 
-<!-- Analytics wiring -->
+<!-- Analytics -->
 <script>
 (function(){
   function buildPath(){
@@ -331,7 +278,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
 })();
 </script>
 
-<!-- TTS: API only, 0.6~1.0 -->
+<!-- TTS: API only (웹 TTS 차단), 속도 0.6~1.0 -->
 <script>
 window.addEventListener('load',()=>{
   const ENDPOINT="https://asia-northeast3-sori-tts.cloudfunctions.net/tts";
@@ -350,109 +297,89 @@ window.addEventListener('load',()=>{
     const b=await r.blob(); const url=URL.createObjectURL(b); lastUrl=url; audio.src=url; setAudioRate(); await audio.play();
   }
 
-  // Listen 버튼: API만 실행(웹 TTS 완전 차단), 카운트 1회
+  // Listen: API만 실행, 카운트 정확히 1회
   document.getElementById('playBtn')?.addEventListener('click', async (e)=>{
     e.preventDefault(); e.stopImmediatePropagation();
     const ko=(document.getElementById('korean')?.textContent||'').trim();
     await playKo(ko);
     const cntEl=document.getElementById('repCount');
     let n=parseInt(cntEl.textContent||'0',10); if(n<5){ n++; cntEl.textContent=String(n); }
-    const dots=[...document.querySelectorAll('.rep-dot')];
-    dots.forEach((d,i)=> d.classList.toggle('completed', i < n));
+    document.querySelectorAll('.rep-dot').forEach((d,i)=> d.classList.toggle('completed', i < n));
   }, true);
 
-  // 외부 speechSynthesis 무력화
+  // 웹 TTS 완전 무력화
   if('speechSynthesis' in window){
     try{ window.speechSynthesis.speak = ()=>{}; window.speechSynthesis.cancel = ()=>{}; }catch(_){}
   }
 });
 </script>
 
-<!-- MEANING/ROMAN ENFORCER: 어떤 상황에서도 강제 유지 -->
+<!-- 뜻/로마자 강제 적용 (무한루프 없는 디바운스 방식) -->
 <script>
 (function(){
   const quote = s => `"${String(s||'').replace(/^"+|"+$/g,'').trim()}"`;
-  let map = null;           // ko -> {e,p}
-  let lastKo = '';
+  let map=null, isApplying=false, debounceTimer=null;
 
-  function buildMap(){
-    const DB = window.SORI_DATA||{};
-    const pools=[...(DB.daily||[]), ...(DB.travel||[]), ...(DB.drama||[])];
+  function buildMapFromData(){
+    const DB=window.SORI_DATA||{};
+    const pools=[...(DB.daily||[]),...(DB.travel||[]),...(DB.drama||[])];
     const m=new Map();
-    pools.forEach(o=>{
-      const k=(o.k||'').trim();
-      if(!k) return;
-      // 가장 정보가 풍부한 데이터 우선
-      if(!m.has(k)) m.set(k, {e:o.e||'', p:o.p||''});
-    });
+    for(const o of pools){ const k=(o.k||'').trim(); if(k && !m.has(k)) m.set(k,{e:o.e||'',p:o.p||''}); }
     return m;
   }
-  function waitForData(max=80){ // ~4초
+  function waitForData(maxMs=2000){
     return new Promise(res=>{
-      let n=0;(function tick(){
-        if(window.SORI_DATA){ res(buildMap()); return; }
-        if(++n>max){ res(buildMap()); return; }
-        setTimeout(tick,50);
+      const start=performance.now();
+      (function poll(){
+        if(window.SORI_DATA || performance.now()-start>maxMs) return res(buildMapFromData());
+        setTimeout(poll,50);
       })();
     });
   }
 
-  function enforce(){
+  function applyOnce(){
+    if(isApplying) return;
     const koEl=korean, enEl=english, prEl=pronunciation, ctxEl=context;
     if(!koEl||!enEl||!prEl||!ctxEl) return;
 
     const ko=(koEl.textContent||'').trim();
     if(!ko) return;
 
-    // 데이터에서 검색
-    const hit = map?.get(ko) || null;
-    const meaning = hit?.e || (ctxEl.textContent||'').replace(/(^"+|"+$)/g,'').trim();
-    const roman   = hit?.p || (prEl.textContent||'').trim() || (enEl.textContent||'').trim();
+    const hit=map?.get(ko);
+    const meaning=(hit?.e || (ctxEl.textContent||'').replace(/(^"+|"+$)/g,'').trim());
+    const roman  =(hit?.p || (prEl.textContent||'').trim() || (enEl.textContent||'').trim());
 
-    // 강제 오버라이드
-    if(meaning) ctxEl.textContent = quote(meaning);
-    if(roman)   enEl.textContent  = roman;
-
-    prEl.style.display='none';
+    isApplying=true; // 가드 시작
+    try{
+      if(meaning && ctxEl.textContent !== quote(meaning)) ctxEl.textContent = quote(meaning);
+      if(roman   && enEl.textContent  !== roman)          enEl.textContent  = roman;
+      prEl.style.display='none';
+    }finally{
+      // 미세 지연 후 가드 해제 (옵저버 재귀 방지)
+      setTimeout(()=>{ isApplying=false; }, 0);
+    }
   }
 
-  function enforceFor(ms=1200){ // 지정 시간 동안 지속 감시 + 강제 적용
-    const start=performance.now();
-    const obs = new MutationObserver(()=> enforce());
-    obs.observe(document.getElementById('lessonCard'), {childList:true,subtree:true,characterData:true});
-
-    (function loop(){
-      enforce();
-      if(performance.now()-start < ms){ requestAnimationFrame(loop); }
-      else { obs.disconnect(); }
-    })();
-  }
-
-  function resetDots(){
-    document.querySelectorAll('.rep-dot').forEach(d=>d.classList.remove('completed'));
-    const cnt=document.getElementById('repCount'); if(cnt) cnt.textContent='0';
+  function scheduleApply(){
+    clearTimeout(debounceTimer);
+    debounceTimer=setTimeout(applyOnce,120);
   }
 
   document.addEventListener('DOMContentLoaded', async ()=>{
     map = await waitForData();
 
-    // 첫 진입: 1.2초 동안 지속 강제 (앱이 덮어써도 다시 덮어씀)
-    enforceFor(1200);
+    // 초기 2회 보정 (데이터 늦을 상황 대비, 무한루프 없음)
+    applyOnce(); setTimeout(applyOnce,250);
 
-    // 문장이 바뀌면 다시 강제 + 점 초기화
-    const mo=new MutationObserver(()=>{
-      const ko=(korean?.textContent||'').trim();
-      if(ko && ko!==lastKo){ lastKo=ko; enforceFor(800); resetDots(); }
+    // #korean 변경만 관찰
+    const mo=new MutationObserver(()=>{ if(!isApplying) scheduleApply(); });
+    if(korean) mo.observe(korean,{childList:true,characterData:true,subtree:true});
+
+    // 탭/네비/서브칩 등 사용자 전환 시에도 1회 보정
+    ['nextBtn','prevBtn','dailyBtn','travelBtn','dramaBtn','savedBtnHidden','subFilters'].forEach(id=>{
+      const el=(id==='subFilters')?document.getElementById('subFilters'):document.getElementById(id);
+      el && el.addEventListener('click', ()=> scheduleApply(), true);
     });
-    mo.observe(korean,{childList:true,characterData:true,subtree:true});
-
-    // 탭/네비 이동, 서브칩 클릭 후에도 재강제
-    const reapply=()=> setTimeout(()=>enforceFor(800), 0);
-    ['nextBtn','prevBtn','dailyBtn','travelBtn','dramaBtn','savedBtnHidden','subFilters']
-      .forEach(id=>{
-        const el=(id==='subFilters')?document.getElementById('subFilters') : document.getElementById(id);
-        el && el.addEventListener('click', reapply, true);
-      });
 
     // Speed 라벨 동기화
     const speedEl=speed, speedLbl=speedTxt;
